<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/auth_tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authentication"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/auth_header_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/need_auth_to_access"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/auth_edtPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/auth_tvWrongNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/wrong_number"
            android:textColor="@color/colorDarkTeal"
            android:textStyle="bold"
            android:layout_gravity="end"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/auth_layout_edtCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/auth_edtCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_code" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/auth_btnVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:padding="16dp"
            android:text="@string/verify"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/auth_tvResendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:text=""
            android:textSize="18sp" />
    </LinearLayout>
        <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
                android:id="@+id/auth_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminateDuration="800"
                app:type="folding_circles"/>
    </RelativeLayout>
</ScrollView>